ci/policy-tests/kyverno/baseline/restrict-sysctls/pod-disallowed-sysctl-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-sysctl-workload
  namespace: default
spec:
  restartPolicy: Always
  securityContext:
    sysctls:
    - name: kernel.msgmax
      value: "65536"
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
